@@ -1,6 +1,11 @@
 
 No release numbers
 ------------------
+ - Mon Aug 28 03:11:15 GMT 2000
+   - Adds lots of comments
+   - Add AIM_CLASS_ALLUSERS constant for setgrouppermmask()
+   - Add warnings support (jbm)
+
  - Mon Aug 21 22:00:18 UTC 2000
    - Implement SNAC login MD5 (thanks to Sonuvbob for that one)
    - Clear out all that old login cruft. Much cleaner now.
